[gd_scene load_steps=9 format=4 uid="uid://bvhtxqdm7e2ji"]

[ext_resource type="Script" uid="uid://eup34biv6gw6" path="res://scripts/game_manager.gd" id="1_p57ef"]
[ext_resource type="TileSet" uid="uid://bsaimjtgqsfs2" path="res://scenes/tile_map.tres" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://c58fvhisnlo6v" path="res://scenes/platform.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dvvc06kaqpeax" path="res://scenes/killzone.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://bbg4pr0uos3mg" path="res://scenes/multiplayer_hud.tscn" id="5_iywne"]
[ext_resource type="PackedScene" uid="uid://bbhty812a36ek" path="res://scenes/damage_hud.tscn" id="6_p57ef"]
[ext_resource type="FontFile" uid="uid://ba7phfwohnp7u" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="6_u5sy4"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_iywne"]

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_p57ef")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(166, -12)
zoom = Vector2(2, 2)

[node name="TimeMapLevel" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD8/wIAAAAAAAAAAAD9/wIAAAAAAAAAAAD+/wIAAAAAAAAAAAD//wIAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAANAAIAAAAAAAAAAAAOAAIAAAAAAAAAAAAPAAIAAAAAAAAAAAAQAAIAAAAAAAAAAAARAAIAAAAAAAAAAAAWAAIAAAAAAAAAAAAVAAIAAAAAAAAAAAAUAAIAAAAAAAAAAAATAAIAAAAAAAAAAAASAAIAAAAAAAAAAAA=")
tile_set = ExtResource("2_lbhrr")

[node name="TimeMapBG" type="TileMapLayer" parent="."]
visible = false
z_index = -1
tile_map_data = PackedByteArray("AADy//f/AAAAAAsAAADy//j/AAAAAAsAAADy//n/AAAAAAsAAADy//r/AAAAAAsAAADy//v/AAAAAAsAAADy//z/AAAAAAsAAADy//3/AAAAAAsAAADy//7/AAAAAAsAAADy////AAAAAAsAAADy/wAAAAAAAAsAAADy/wEAAAAAAAsAAADy/wIAAAAAAAsAAADy/wMAAAAAAAsAAADy/wQAAAAAAAsAAADy/wUAAAAAAAsAAADy/wYAAAAAAAsAAADy/wcAAAAAAAsAAADy/wgAAAAAAAsAAADz//f/AAAAAAsAAADz//j/AAAAAAsAAADz//n/AAAAAAsAAADz//r/AAAAAAsAAADz//v/AAAAAAsAAADz//z/AAAAAAsAAADz//3/AAAAAAsAAADz//7/AAAAAAsAAADz////AAAAAAsAAADz/wAAAAAAAAsAAADz/wEAAAAAAAsAAADz/wIAAAAAAAsAAADz/wMAAAAAAAsAAADz/wQAAAAAAAsAAADz/wUAAAAAAAsAAADz/wYAAAAAAAsAAADz/wcAAAAAAAsAAADz/wgAAAAAAAsAAAD0//f/AAAAAAsAAAD0//j/AAAAAAsAAAD0//n/AAAAAAsAAAD0//r/AAAAAAsAAAD0//v/AAAAAAsAAAD0//z/AAAAAAsAAAD0//3/AAAAAAsAAAD0//7/AAAAAAsAAAD0////AAAAAAsAAAD0/wAAAAAAAAsAAAD0/wEAAAAAAAsAAAD0/wIAAAAAAAsAAAD0/wMAAAAAAAsAAAD0/wQAAAAAAAsAAAD0/wUAAAAAAAsAAAD0/wYAAAAAAAsAAAD0/wcAAAAAAAsAAAD0/wgAAAAAAAsAAAD1//f/AAAAAAsAAAD1//j/AAAAAAsAAAD1//n/AAAAAAsAAAD1//r/AAAAAAsAAAD1//v/AAAAAAsAAAD1//z/AAAAAAsAAAD1//3/AAAAAAsAAAD1//7/AAAAAAsAAAD1////AAAAAAsAAAD1/wAAAAAAAAsAAAD1/wEAAAAAAAsAAAD1/wIAAAAAAAsAAAD1/wMAAAAAAAsAAAD1/wQAAAAAAAsAAAD1/wUAAAAAAAsAAAD1/wYAAAAAAAsAAAD1/wcAAAAAAAsAAAD1/wgAAAAAAAsAAAD2//f/AAAAAAsAAAD2//j/AAAAAAsAAAD2//n/AAAAAAsAAAD2//r/AAAAAAsAAAD2//v/AAAAAAsAAAD2//z/AAAAAAsAAAD2//3/AAAAAAsAAAD2//7/AAAAAAsAAAD2////AAAAAAsAAAD2/wAAAAAAAAsAAAD2/wEAAAAAAAsAAAD2/wIAAAAAAAsAAAD2/wMAAAAAAAsAAAD2/wQAAAAAAAsAAAD2/wUAAAAAAAsAAAD2/wYAAAAAAAsAAAD2/wcAAAAAAAsAAAD2/wgAAAAAAAsAAAD3//f/AAAAAAsAAAD3//j/AAAAAAsAAAD3//n/AAAAAAsAAAD3//r/AAAAAAsAAAD3//v/AAAAAAsAAAD3//z/AAAAAAsAAAD3//3/AAAAAAsAAAD3//7/AAAAAAsAAAD3////AAAAAAsAAAD3/wAAAAAAAAsAAAD3/wEAAAAAAAsAAAD3/wIAAAAAAAsAAAD3/wMAAAAAAAsAAAD3/wQAAAAAAAsAAAD3/wUAAAAAAAsAAAD3/wYAAAAAAAsAAAD3/wcAAAAAAAsAAAD3/wgAAAAAAAsAAAD4//f/AAAAAAsAAAD4//j/AAAAAAsAAAD4//n/AAAAAAsAAAD4//r/AAAAAAsAAAD4//v/AAAAAAsAAAD4//z/AAAAAAsAAAD4//3/AAAAAAsAAAD4//7/AAAAAAsAAAD4////AAAAAAsAAAD4/wAAAAAAAAsAAAD4/wEAAAAAAAsAAAD4/wIAAAAAAAsAAAD4/wMAAAAAAAsAAAD4/wQAAAAAAAsAAAD4/wUAAAAAAAsAAAD4/wYAAAAAAAsAAAD4/wcAAAAAAAsAAAD4/wgAAAAAAAsAAAD5//f/AAAAAAsAAAD5//j/AAAAAAsAAAD5//n/AAAAAAsAAAD5//r/AAAAAAsAAAD5//v/AAAAAAsAAAD5//z/AAAAAAsAAAD5//3/AAAAAAsAAAD5//7/AAAAAAsAAAD5////AAAAAAsAAAD5/wAAAAAAAAsAAAD5/wEAAAAAAAsAAAD5/wIAAAAAAAsAAAD5/wMAAAAAAAsAAAD5/wQAAAAAAAsAAAD5/wUAAAAAAAsAAAD5/wYAAAAAAAsAAAD5/wcAAAAAAAsAAAD5/wgAAAAAAAsAAAD6//f/AAAAAAsAAAD6//j/AAAAAAsAAAD6//n/AAAAAAsAAAD6//r/AAAAAAsAAAD6//v/AAAAAAsAAAD6//z/AAAAAAsAAAD6//3/AAAAAAsAAAD6//7/AAAAAAsAAAD6////AAAAAAsAAAD6/wAAAAAAAAsAAAD6/wEAAAAAAAsAAAD6/wIAAAAAAAsAAAD6/wMAAAAAAAsAAAD6/wQAAAAAAAsAAAD6/wUAAAAAAAsAAAD6/wYAAAAAAAsAAAD6/wcAAAAAAAsAAAD6/wgAAAAAAAsAAAD7//f/AAAAAAsAAAD7//j/AAAAAAsAAAD7//n/AAAAAAsAAAD7//r/AAAAAAsAAAD7//v/AAAAAAsAAAD7//z/AAAAAAsAAAD7//3/AAAAAAsAAAD7//7/AAAAAAsAAAD7////AAAAAAsAAAD7/wAAAAAAAAsAAAD7/wEAAAAAAAsAAAD7/wIAAAAAAAsAAAD7/wMAAAAAAAsAAAD7/wQAAAAAAAsAAAD7/wUAAAAAAAsAAAD7/wYAAAAAAAsAAAD7/wcAAAAAAAsAAAD7/wgAAAAAAAsAAAD8//f/AAAAAAsAAAD8//j/AAAAAAsAAAD8//n/AAAAAAsAAAD8//r/AAAAAAsAAAD8//v/AAAAAAsAAAD8//z/AAAAAAsAAAD8//3/AAAAAAsAAAD8//7/AAAAAAsAAAD8////AAAAAAsAAAD8/wAAAAAAAAsAAAD8/wEAAAAAAAsAAAD8/wIAAAAAAAsAAAD8/wMAAAAAAAsAAAD8/wQAAAAAAAsAAAD8/wUAAAAAAAsAAAD8/wYAAAAAAAsAAAD8/wcAAAAAAAsAAAD8/wgAAAAAAAsAAAD9//f/AAAAAAsAAAD9//j/AAAAAAsAAAD9//n/AAAAAAsAAAD9//r/AAAAAAsAAAD9//v/AAAAAAsAAAD9//z/AAAAAAsAAAD9//3/AAAAAAsAAAD9//7/AAAAAAsAAAD9////AAAAAAsAAAD9/wAAAAAAAAsAAAD9/wEAAAAAAAsAAAD9/wIAAAAAAAsAAAD9/wMAAAAAAAsAAAD9/wQAAAAAAAsAAAD9/wUAAAAAAAsAAAD9/wYAAAAAAAsAAAD9/wcAAAAAAAsAAAD9/wgAAAAAAAsAAAD+//f/AAAAAAsAAAD+//j/AAAAAAsAAAD+//n/AAAAAAsAAAD+//r/AAAAAAsAAAD+//v/AAAAAAsAAAD+//z/AAAAAAsAAAD+//3/AAAAAAsAAAD+//7/AAAAAAsAAAD+////AAAAAAsAAAD+/wAAAAAAAAsAAAD+/wEAAAAAAAsAAAD+/wIAAAAAAAsAAAD+/wMAAAAAAAsAAAD+/wQAAAAAAAsAAAD+/wUAAAAAAAsAAAD+/wYAAAAAAAsAAAD+/wcAAAAAAAsAAAD+/wgAAAAAAAsAAAD///f/AAAAAAsAAAD///j/AAAAAAsAAAD///n/AAAAAAsAAAD///r/AAAAAAsAAAD///v/AAAAAAsAAAD///z/AAAAAAsAAAD///3/AAAAAAsAAAD///7/AAAAAAsAAAD/////AAAAAAsAAAD//wAAAAAAAAsAAAD//wEAAAAAAAsAAAD//wIAAAAAAAsAAAD//wMAAAAAAAsAAAD//wQAAAAAAAsAAAD//wUAAAAAAAsAAAD//wYAAAAAAAsAAAD//wcAAAAAAAsAAAD//wgAAAAAAAsAAAAAAPf/AAAAAAsAAAAAAPj/AAAAAAsAAAAAAPn/AAAAAAsAAAAAAPr/AAAAAAsAAAAAAPv/AAAAAAsAAAAAAPz/AAAAAAsAAAAAAP3/AAAAAAsAAAAAAP7/AAAAAAsAAAAAAP//AAAAAAsAAAAAAAAAAAAAAAsAAAAAAAEAAAAAAAsAAAAAAAIAAAAAAAsAAAAAAAMAAAAAAAsAAAAAAAQAAAAAAAsAAAAAAAUAAAAAAAsAAAAAAAYAAAAAAAsAAAAAAAcAAAAAAAsAAAAAAAgAAAAAAAsAAAABAPf/AAAAAAsAAAABAPj/AAAAAAsAAAABAPn/AAAAAAsAAAABAPr/AAAAAAsAAAABAPv/AAAAAAsAAAABAPz/AAAAAAsAAAABAP3/AAAAAAsAAAABAP7/AAAAAAsAAAABAP//AAAAAAsAAAABAAAAAAAAAAsAAAABAAEAAAAAAAsAAAABAAIAAAAAAAsAAAABAAMAAAAAAAsAAAABAAQAAAAAAAsAAAABAAUAAAAAAAsAAAABAAYAAAAAAAsAAAABAAcAAAAAAAsAAAABAAgAAAAAAAsAAAACAPf/AAAAAAsAAAACAPj/AAAAAAsAAAACAPn/AAAAAAsAAAACAPr/AAAAAAsAAAACAPv/AAAAAAsAAAACAPz/AAAAAAsAAAACAP3/AAAAAAsAAAACAP7/AAAAAAsAAAACAP//AAAAAAsAAAACAAAAAAAAAAsAAAACAAEAAAAAAAsAAAACAAIAAAAAAAsAAAACAAMAAAAAAAsAAAACAAQAAAAAAAsAAAACAAUAAAAAAAsAAAACAAYAAAAAAAsAAAACAAcAAAAAAAsAAAACAAgAAAAAAAsAAAADAPf/AAAAAAsAAAADAPj/AAAAAAsAAAADAPn/AAAAAAsAAAADAPr/AAAAAAsAAAADAPv/AAAAAAsAAAADAPz/AAAAAAsAAAADAP3/AAAAAAsAAAADAP7/AAAAAAsAAAADAP//AAAAAAsAAAADAAAAAAAAAAsAAAADAAEAAAAAAAsAAAADAAIAAAAAAAsAAAADAAMAAAAAAAsAAAADAAQAAAAAAAsAAAADAAUAAAAAAAsAAAADAAYAAAAAAAsAAAADAAcAAAAAAAsAAAADAAgAAAAAAAsAAAAEAPf/AAAAAAsAAAAEAPj/AAAAAAsAAAAEAPn/AAAAAAsAAAAEAPr/AAAAAAsAAAAEAPv/AAAAAAsAAAAEAPz/AAAAAAsAAAAEAP3/AAAAAAsAAAAEAP7/AAAAAAsAAAAEAP//AAAAAAsAAAAEAAAAAAAAAAsAAAAEAAEAAAAAAAsAAAAEAAIAAAAAAAsAAAAEAAMAAAAAAAsAAAAEAAQAAAAAAAsAAAAEAAUAAAAAAAsAAAAEAAYAAAAAAAsAAAAEAAcAAAAAAAsAAAAEAAgAAAAAAAsAAAAFAPf/AAAAAAsAAAAFAPj/AAAAAAsAAAAFAPn/AAAAAAsAAAAFAPr/AAAAAAsAAAAFAPv/AAAAAAsAAAAFAPz/AAAAAAsAAAAFAP3/AAAAAAsAAAAFAP7/AAAAAAsAAAAFAP//AAAAAAsAAAAFAAAAAAAAAAsAAAAFAAEAAAAAAAsAAAAFAAIAAAAAAAsAAAAFAAMAAAAAAAsAAAAFAAQAAAAAAAsAAAAFAAUAAAAAAAsAAAAFAAYAAAAAAAsAAAAFAAcAAAAAAAsAAAAFAAgAAAAAAAsAAAAGAPf/AAAAAAsAAAAGAPj/AAAAAAsAAAAGAPn/AAAAAAsAAAAGAPr/AAAAAAsAAAAGAPv/AAAAAAsAAAAGAPz/AAAAAAsAAAAGAP3/AAAAAAsAAAAGAP7/AAAAAAsAAAAGAP//AAAAAAsAAAAGAAAAAAAAAAsAAAAGAAEAAAAAAAsAAAAGAAIAAAAAAAsAAAAGAAMAAAAAAAsAAAAGAAQAAAAAAAsAAAAGAAUAAAAAAAsAAAAGAAYAAAAAAAsAAAAGAAcAAAAAAAsAAAAGAAgAAAAAAAsAAAAHAPf/AAAAAAsAAAAHAPj/AAAAAAsAAAAHAPn/AAAAAAsAAAAHAPr/AAAAAAsAAAAHAPv/AAAAAAsAAAAHAPz/AAAAAAsAAAAHAP3/AAAAAAsAAAAHAP7/AAAAAAsAAAAHAP//AAAAAAsAAAAHAAAAAAAAAAsAAAAHAAEAAAAAAAsAAAAHAAIAAAAAAAsAAAAHAAMAAAAAAAsAAAAHAAQAAAAAAAsAAAAHAAUAAAAAAAsAAAAHAAYAAAAAAAsAAAAHAAcAAAAAAAsAAAAHAAgAAAAAAAsAAAAIAPf/AAAAAAsAAAAIAPj/AAAAAAsAAAAIAPn/AAAAAAsAAAAIAPr/AAAAAAsAAAAIAPv/AAAAAAsAAAAIAPz/AAAAAAsAAAAIAP3/AAAAAAsAAAAIAP7/AAAAAAsAAAAIAP//AAAAAAsAAAAIAAAAAAAAAAsAAAAIAAEAAAAAAAsAAAAIAAIAAAAAAAsAAAAIAAMAAAAAAAsAAAAIAAQAAAAAAAsAAAAIAAUAAAAAAAsAAAAIAAYAAAAAAAsAAAAIAAcAAAAAAAsAAAAIAAgAAAAAAAsAAAAJAPf/AAAAAAsAAAAJAPj/AAAAAAsAAAAJAPn/AAAAAAsAAAAJAPr/AAAAAAsAAAAJAPv/AAAAAAsAAAAJAPz/AAAAAAsAAAAJAP3/AAAAAAsAAAAJAP7/AAAAAAsAAAAJAP//AAAAAAsAAAAJAAAAAAAAAAsAAAAJAAEAAAAAAAsAAAAJAAIAAAAAAAsAAAAJAAMAAAAAAAsAAAAJAAQAAAAAAAsAAAAJAAUAAAAAAAsAAAAJAAYAAAAAAAsAAAAJAAcAAAAAAAsAAAAJAAgAAAAAAAsAAAAKAPf/AAAAAAsAAAAKAPj/AAAAAAsAAAAKAPn/AAAAAAsAAAAKAPr/AAAAAAsAAAAKAPv/AAAAAAsAAAAKAPz/AAAAAAsAAAAKAP3/AAAAAAsAAAAKAP7/AAAAAAsAAAAKAP//AAAAAAsAAAAKAAAAAAAAAAsAAAAKAAEAAAAAAAsAAAAKAAIAAAAAAAsAAAAKAAMAAAAAAAsAAAAKAAQAAAAAAAsAAAAKAAUAAAAAAAsAAAAKAAYAAAAAAAsAAAAKAAcAAAAAAAsAAAAKAAgAAAAAAAsAAAALAPf/AAAAAAsAAAALAPj/AAAAAAsAAAALAPn/AAAAAAsAAAALAPr/AAAAAAsAAAALAPv/AAAAAAsAAAALAPz/AAAAAAsAAAALAP3/AAAAAAsAAAALAP7/AAAAAAsAAAALAP//AAAAAAsAAAALAAAAAAAAAAsAAAALAAEAAAAAAAsAAAALAAIAAAAAAAsAAAALAAMAAAAAAAsAAAALAAQAAAAAAAsAAAALAAUAAAAAAAsAAAALAAYAAAAAAAsAAAALAAcAAAAAAAsAAAALAAgAAAAAAAsAAAAMAPf/AAAAAAsAAAAMAPj/AAAAAAsAAAAMAPn/AAAAAAsAAAAMAPr/AAAAAAsAAAAMAPv/AAAAAAsAAAAMAPz/AAAAAAsAAAAMAP3/AAAAAAsAAAAMAP7/AAAAAAsAAAAMAP//AAAAAAsAAAAMAAAAAAAAAAsAAAAMAAEAAAAAAAsAAAAMAAIAAAAAAAsAAAAMAAMAAAAAAAsAAAAMAAQAAAAAAAsAAAAMAAUAAAAAAAsAAAAMAAYAAAAAAAsAAAAMAAcAAAAAAAsAAAAMAAgAAAAAAAsAAAANAPf/AAAAAAsAAAANAPj/AAAAAAsAAAANAPn/AAAAAAsAAAANAPr/AAAAAAsAAAANAPv/AAAAAAsAAAANAPz/AAAAAAsAAAANAP3/AAAAAAsAAAANAP7/AAAAAAsAAAANAP//AAAAAAsAAAANAAAAAAAAAAsAAAANAAEAAAAAAAsAAAANAAIAAAAAAAsAAAANAAMAAAAAAAsAAAANAAQAAAAAAAsAAAANAAUAAAAAAAsAAAANAAYAAAAAAAsAAAANAAcAAAAAAAsAAAANAAgAAAAAAAsAAAAOAPf/AAAAAAsAAAAOAPj/AAAAAAsAAAAOAPn/AAAAAAsAAAAOAPr/AAAAAAsAAAAOAPv/AAAAAAsAAAAOAPz/AAAAAAsAAAAOAP3/AAAAAAsAAAAOAP7/AAAAAAsAAAAOAP//AAAAAAsAAAAOAAAAAAAAAAsAAAAOAAEAAAAAAAsAAAAOAAIAAAAAAAsAAAAOAAMAAAAAAAsAAAAOAAQAAAAAAAsAAAAOAAUAAAAAAAsAAAAOAAYAAAAAAAsAAAAOAAcAAAAAAAsAAAAOAAgAAAAAAAsAAAAPAPf/AAAAAAsAAAAPAPj/AAAAAAsAAAAPAPn/AAAAAAsAAAAPAPr/AAAAAAsAAAAPAPv/AAAAAAsAAAAPAPz/AAAAAAsAAAAPAP3/AAAAAAsAAAAPAP7/AAAAAAsAAAAPAP//AAAAAAsAAAAPAAAAAAAAAAsAAAAPAAEAAAAAAAsAAAAPAAIAAAAAAAsAAAAPAAMAAAAAAAsAAAAPAAQAAAAAAAsAAAAPAAUAAAAAAAsAAAAPAAYAAAAAAAsAAAAPAAcAAAAAAAsAAAAPAAgAAAAAAAsAAAAQAPf/AAAAAAsAAAAQAPj/AAAAAAsAAAAQAPn/AAAAAAsAAAAQAPr/AAAAAAsAAAAQAPv/AAAAAAsAAAAQAPz/AAAAAAsAAAAQAP3/AAAAAAsAAAAQAP7/AAAAAAsAAAAQAP//AAAAAAsAAAAQAAAAAAAAAAsAAAAQAAEAAAAAAAsAAAAQAAIAAAAAAAsAAAAQAAMAAAAAAAsAAAAQAAQAAAAAAAsAAAAQAAUAAAAAAAsAAAAQAAYAAAAAAAsAAAAQAAcAAAAAAAsAAAAQAAgAAAAAAAsAAAARAPf/AAAAAAsAAAARAPj/AAAAAAsAAAARAPn/AAAAAAsAAAARAPr/AAAAAAsAAAARAPv/AAAAAAsAAAARAPz/AAAAAAsAAAARAP3/AAAAAAsAAAARAP7/AAAAAAsAAAARAP//AAAAAAsAAAARAAAAAAAAAAsAAAARAAEAAAAAAAsAAAARAAIAAAAAAAsAAAARAAMAAAAAAAsAAAARAAQAAAAAAAsAAAARAAUAAAAAAAsAAAARAAYAAAAAAAsAAAARAAcAAAAAAAsAAAARAAgAAAAAAAsAAAASAPf/AAAAAAsAAAASAPj/AAAAAAsAAAASAPn/AAAAAAsAAAASAPr/AAAAAAsAAAASAPv/AAAAAAsAAAASAPz/AAAAAAsAAAASAP3/AAAAAAsAAAASAP7/AAAAAAsAAAASAP//AAAAAAsAAAASAAAAAAAAAAsAAAASAAEAAAAAAAsAAAASAAIAAAAAAAsAAAASAAMAAAAAAAsAAAASAAQAAAAAAAsAAAASAAUAAAAAAAsAAAASAAYAAAAAAAsAAAASAAcAAAAAAAsAAAASAAgAAAAAAAsAAAATAPf/AAAAAAsAAAATAPj/AAAAAAsAAAATAPn/AAAAAAsAAAATAPr/AAAAAAsAAAATAPv/AAAAAAsAAAATAPz/AAAAAAsAAAATAP3/AAAAAAsAAAATAP7/AAAAAAsAAAATAP//AAAAAAsAAAATAAAAAAAAAAsAAAATAAEAAAAAAAsAAAATAAIAAAAAAAsAAAATAAMAAAAAAAsAAAATAAQAAAAAAAsAAAATAAUAAAAAAAsAAAATAAYAAAAAAAsAAAATAAcAAAAAAAsAAAATAAgAAAAAAAsAAAAUAPf/AAAAAAsAAAAUAPj/AAAAAAsAAAAUAPn/AAAAAAsAAAAUAPr/AAAAAAsAAAAUAPv/AAAAAAsAAAAUAPz/AAAAAAsAAAAUAP3/AAAAAAsAAAAUAP7/AAAAAAsAAAAUAP//AAAAAAsAAAAUAAAAAAAAAAsAAAAUAAEAAAAAAAsAAAAUAAIAAAAAAAsAAAAUAAMAAAAAAAsAAAAUAAQAAAAAAAsAAAAUAAUAAAAAAAsAAAAUAAYAAAAAAAsAAAAUAAcAAAAAAAsAAAAUAAgAAAAAAAsAAAAVAPf/AAAAAAsAAAAVAPj/AAAAAAsAAAAVAPn/AAAAAAsAAAAVAPr/AAAAAAsAAAAVAPv/AAAAAAsAAAAVAPz/AAAAAAsAAAAVAP3/AAAAAAsAAAAVAP7/AAAAAAsAAAAVAP//AAAAAAsAAAAVAAAAAAAAAAsAAAAVAAEAAAAAAAsAAAAVAAIAAAAAAAsAAAAVAAMAAAAAAAsAAAAVAAQAAAAAAAsAAAAVAAUAAAAAAAsAAAAVAAYAAAAAAAsAAAAVAAcAAAAAAAsAAAAVAAgAAAAAAAsAAAAWAPf/AAAAAAsAAAAWAPj/AAAAAAsAAAAWAPn/AAAAAAsAAAAWAPr/AAAAAAsAAAAWAPv/AAAAAAsAAAAWAPz/AAAAAAsAAAAWAP3/AAAAAAsAAAAWAP7/AAAAAAsAAAAWAP//AAAAAAsAAAAWAAAAAAAAAAsAAAAWAAEAAAAAAAsAAAAWAAIAAAAAAAsAAAAWAAMAAAAAAAsAAAAWAAQAAAAAAAsAAAAWAAUAAAAAAAsAAAAWAAYAAAAAAAsAAAAWAAcAAAAAAAsAAAAWAAgAAAAAAAsAAAAXAPf/AAAAAAsAAAAXAPj/AAAAAAsAAAAXAPn/AAAAAAsAAAAXAPr/AAAAAAsAAAAXAPv/AAAAAAsAAAAXAPz/AAAAAAsAAAAXAP3/AAAAAAsAAAAXAP7/AAAAAAsAAAAXAP//AAAAAAsAAAAXAAAAAAAAAAsAAAAXAAEAAAAAAAsAAAAXAAIAAAAAAAsAAAAXAAMAAAAAAAsAAAAXAAQAAAAAAAsAAAAXAAUAAAAAAAsAAAAXAAYAAAAAAAsAAAAXAAcAAAAAAAsAAAAXAAgAAAAAAAsAAAAYAPf/AAAAAAsAAAAYAPj/AAAAAAsAAAAYAPn/AAAAAAsAAAAYAPr/AAAAAAsAAAAYAPv/AAAAAAsAAAAYAPz/AAAAAAsAAAAYAP3/AAAAAAsAAAAYAP7/AAAAAAsAAAAYAP//AAAAAAsAAAAYAAAAAAAAAAsAAAAYAAEAAAAAAAsAAAAYAAIAAAAAAAsAAAAYAAMAAAAAAAsAAAAYAAQAAAAAAAsAAAAYAAUAAAAAAAsAAAAYAAYAAAAAAAsAAAAYAAcAAAAAAAsAAAAYAAgAAAAAAAsAAAAZAPf/AAAAAAsAAAAZAPj/AAAAAAsAAAAZAPn/AAAAAAsAAAAZAPr/AAAAAAsAAAAZAPv/AAAAAAsAAAAZAPz/AAAAAAsAAAAZAP3/AAAAAAsAAAAZAP7/AAAAAAsAAAAZAP//AAAAAAsAAAAZAAAAAAAAAAsAAAAZAAEAAAAAAAsAAAAZAAIAAAAAAAsAAAAZAAMAAAAAAAsAAAAZAAQAAAAAAAsAAAAZAAUAAAAAAAsAAAAZAAYAAAAAAAsAAAAZAAcAAAAAAAsAAAAZAAgAAAAAAAsAAAAaAPf/AAAAAAsAAAAaAPj/AAAAAAsAAAAaAPn/AAAAAAsAAAAaAPr/AAAAAAsAAAAaAPv/AAAAAAsAAAAaAPz/AAAAAAsAAAAaAP3/AAAAAAsAAAAaAP7/AAAAAAsAAAAaAP//AAAAAAsAAAAaAAAAAAAAAAsAAAAaAAEAAAAAAAsAAAAaAAIAAAAAAAsAAAAaAAMAAAAAAAsAAAAaAAQAAAAAAAsAAAAaAAUAAAAAAAsAAAAaAAYAAAAAAAsAAAAaAAcAAAAAAAsAAAAaAAgAAAAAAAsAAAAbAPf/AAAAAAsAAAAbAPj/AAAAAAsAAAAbAPn/AAAAAAsAAAAbAPr/AAAAAAsAAAAbAPv/AAAAAAsAAAAbAPz/AAAAAAsAAAAbAP3/AAAAAAsAAAAbAP7/AAAAAAsAAAAbAP//AAAAAAsAAAAbAAAAAAAAAAsAAAAbAAEAAAAAAAsAAAAbAAIAAAAAAAsAAAAbAAMAAAAAAAsAAAAbAAQAAAAAAAsAAAAbAAUAAAAAAAsAAAAbAAYAAAAAAAsAAAAbAAcAAAAAAAsAAAAbAAgAAAAAAAsAAAAcAPf/AAAAAAsAAAAcAPj/AAAAAAsAAAAcAPn/AAAAAAsAAAAcAPr/AAAAAAsAAAAcAPv/AAAAAAsAAAAcAPz/AAAAAAsAAAAcAP3/AAAAAAsAAAAcAP7/AAAAAAsAAAAcAP//AAAAAAsAAAAcAAAAAAAAAAsAAAAcAAEAAAAAAAsAAAAcAAIAAAAAAAsAAAAcAAMAAAAAAAsAAAAcAAQAAAAAAAsAAAAcAAUAAAAAAAsAAAAcAAYAAAAAAAsAAAAcAAcAAAAAAAsAAAAcAAgAAAAAAAsAAAAdAPf/AAAAAAsAAAAdAPj/AAAAAAsAAAAdAPn/AAAAAAsAAAAdAPr/AAAAAAsAAAAdAPv/AAAAAAsAAAAdAPz/AAAAAAsAAAAdAP3/AAAAAAsAAAAdAP7/AAAAAAsAAAAdAP//AAAAAAsAAAAdAAAAAAAAAAsAAAAdAAEAAAAAAAsAAAAdAAIAAAAAAAsAAAAdAAMAAAAAAAsAAAAdAAQAAAAAAAsAAAAdAAUAAAAAAAsAAAAdAAYAAAAAAAsAAAAdAAcAAAAAAAsAAAAdAAgAAAAAAAsAAAAeAPf/AAAAAAsAAAAeAPj/AAAAAAsAAAAeAPn/AAAAAAsAAAAeAPr/AAAAAAsAAAAeAPv/AAAAAAsAAAAeAPz/AAAAAAsAAAAeAP3/AAAAAAsAAAAeAP7/AAAAAAsAAAAeAP//AAAAAAsAAAAeAAAAAAAAAAsAAAAeAAEAAAAAAAsAAAAeAAIAAAAAAAsAAAAeAAMAAAAAAAsAAAAeAAQAAAAAAAsAAAAeAAUAAAAAAAsAAAAeAAYAAAAAAAsAAAAeAAcAAAAAAAsAAAAeAAgAAAAAAAsAAAAfAPf/AAAAAAsAAAAfAPj/AAAAAAsAAAAfAPn/AAAAAAsAAAAfAPr/AAAAAAsAAAAfAPv/AAAAAAsAAAAfAPz/AAAAAAsAAAAfAP3/AAAAAAsAAAAfAP7/AAAAAAsAAAAfAP//AAAAAAsAAAAfAAAAAAAAAAsAAAAfAAEAAAAAAAsAAAAfAAIAAAAAAAsAAAAfAAMAAAAAAAsAAAAfAAQAAAAAAAsAAAAfAAUAAAAAAAsAAAAfAAYAAAAAAAsAAAAfAAcAAAAAAAsAAAAfAAgAAAAAAAsAAAAgAPf/AAAAAAsAAAAgAPj/AAAAAAsAAAAgAPn/AAAAAAsAAAAgAPr/AAAAAAsAAAAgAPv/AAAAAAsAAAAgAPz/AAAAAAsAAAAgAP3/AAAAAAsAAAAgAP7/AAAAAAsAAAAgAP//AAAAAAsAAAAgAAAAAAAAAAsAAAAgAAEAAAAAAAsAAAAgAAIAAAAAAAsAAAAgAAMAAAAAAAsAAAAgAAQAAAAAAAsAAAAgAAUAAAAAAAsAAAAgAAYAAAAAAAsAAAAgAAcAAAAAAAsAAAAgAAgAAAAAAAsAAAAhAPf/AAAAAAsAAAAhAPj/AAAAAAsAAAAhAPn/AAAAAAsAAAAhAPr/AAAAAAsAAAAhAPv/AAAAAAsAAAAhAPz/AAAAAAsAAAAhAP3/AAAAAAsAAAAhAP7/AAAAAAsAAAAhAP//AAAAAAsAAAAhAAAAAAAAAAsAAAAhAAEAAAAAAAsAAAAhAAIAAAAAAAsAAAAhAAMAAAAAAAsAAAAhAAQAAAAAAAsAAAAhAAUAAAAAAAsAAAAhAAYAAAAAAAsAAAAhAAcAAAAAAAsAAAAhAAgAAAAAAAsAAAAiAPf/AAAAAAsAAAAiAPj/AAAAAAsAAAAiAPn/AAAAAAsAAAAiAPr/AAAAAAsAAAAiAPv/AAAAAAsAAAAiAPz/AAAAAAsAAAAiAP3/AAAAAAsAAAAiAP7/AAAAAAsAAAAiAP//AAAAAAsAAAAiAAAAAAAAAAsAAAAiAAEAAAAAAAsAAAAiAAIAAAAAAAsAAAAiAAMAAAAAAAsAAAAiAAQAAAAAAAsAAAAiAAUAAAAAAAsAAAAiAAYAAAAAAAsAAAAiAAcAAAAAAAsAAAAiAAgAAAAAAAsAAAA=")
tile_set = ExtResource("2_lbhrr")

[node name="Killzone" parent="." instance=ExtResource("4_lbhrr")]
position = Vector2(-47, 125)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("WorldBoundaryShape2D_iywne")

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("3_lnu2h")]
position = Vector2(73, -15)
scale = Vector2(4.47843, 1.19931)

[node name="Platform2" parent="Platforms" instance=ExtResource("3_lnu2h")]
position = Vector2(243, -16)
scale = Vector2(4.47843, 1.19931)

[node name="Platform3" parent="Platforms" instance=ExtResource("3_lnu2h")]
position = Vector2(166, -74)
scale = Vector2(4.47843, 1.19931)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cl3qj27qk7bsy")
spawn_path = NodePath("../Players")
spawn_limit = 4

[node name="Players" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DamageHUD" parent="CanvasLayer/Control" node_paths=PackedStringArray("players") instance=ExtResource("6_p57ef")]
layout_mode = 1
players = NodePath("../../../Players")
custom_font = ExtResource("6_u5sy4")

[node name="MultiplayerHUD" parent="CanvasLayer/Control" instance=ExtResource("5_iywne")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 50.0
offset_top = 200.0
offset_right = 50.0
offset_bottom = 200.0

[connection signal="host_game_pressed" from="CanvasLayer/Control/MultiplayerHUD" to="GameManager" method="become_host"]
[connection signal="join_game_pressed" from="CanvasLayer/Control/MultiplayerHUD" to="GameManager" method="join_as_player_2"]
